--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "credit-cards",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Pechalka.github.io/credit-cards",
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -10,7 +11,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "1.0.0"
   }
 }
